[gd_scene load_steps=4 format=3 uid="uid://baakrjeehjclq"]

[ext_resource type="Theme" uid="uid://dvunoh38j5ne6" path="res://ui/base_theme.tres" id="1_myx47"]
[ext_resource type="Script" uid="uid://c7xgg0gcgxebh" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="PackedScene" uid="uid://m61nhd2pj5qr" path="res://scenes/settings.tscn" id="3_kukqi"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 200
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_myx47")
script = ExtResource("1_n87rw")

[node name="PauseMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 475.0
offset_top = 236.0
offset_right = -475.0
offset_bottom = -236.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_right = 150

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Resume" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Resume"

[node name="Settings" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"

[node name="Exit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="Settings" parent="." instance=ExtResource("3_kukqi")]
layout_mode = 1

[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
